[Payments] Blink: Throw TypeError if 2 shipping option have same id.

Since those were the last 2 Failures for the payment-request-constructor
.https.txt, removing the associates expected file.

Bug: 766316
Change-Id: I65c1f924c15e134c9f5ff68649802358fc43e074